<resources>
    <string name="app_name">Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="start_meditation">Start Meditation</string>
    <string name="todo">todo</string>
    <string name="key_to_a_better_self">key to a better self</string>
    <string name="zenify">zenify</string>
    <string name="mobile_num">+91 987654321</string>
    <string name="welcome"><u>Welcome</u></string>
    <string name="login"><u>Login-</u></string>
    <string name="password"><u>Password</u></string>
    <string name="e_mail_address"><u>E-Mail Address</u></string>

    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="webclient_id">280637442417-hopda628tm1ifhfgd0tka8dgchkjo4tg.apps.googleusercontent.com</string>
</resources>